--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,8 @@
     /* INFO: COLOURS */
     --clg0: #FAFBFC;
 
+    --clgh: #D1D3D640;
+
     --clg1: #D1D3D6;
     --clg2: #AFB1B4;
     --cg: #75787B;
