clean up meetups more, and records

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -170,6 +170,11 @@ td:nth-child(2) {
 }
 
 
+.tc-placeholder {
+    color: var(--c-lg2);
+    font-weight: 500;
+}
+
 
 /* INFO: FILTER BAR */
 .filter-bar {
