--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -186,22 +186,6 @@ td:nth-child(2) {
 
 
 
-/* INFO: LISTS */
-ul {
-    padding: 0;
-    padding-left: 20px;
-    margin: 0;
-    list-style-type: '-   ';
-}
-
-li::marker {
-    color: var(--c-dg1);
-    font-weight: 500;
-}
-
-
-
-
 /* INFO: BUTTON AND ANCHOR OVERRIDES */
 button {
     padding: 0;
@@ -212,4 +196,16 @@ button {
 
 a {
     text-decoration: none;
+}
+
+
+/* INFO: LINKS */
+.regular-link {
+    color: var(--c-a);
+
+    transition: color var(--v-animation-delay) ease-in-out;
+}
+
+.regular-link:hover {
+    color: var(--c-da1);
 }
