delete button. rename formats

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -188,20 +188,9 @@ tr:nth-of-type(even) td {
     background-color: var(--c-lgh);
 }
 
-td {
+td, th {
     line-height: 30px;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 /* INFO: FILTER BAR */
 .filter-bar {
