--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,11 @@
 * {
     box-sizing: border-box;
     -webkit-appearance: none;
+    -webkit-text-size-adjust: 100%;
+}
+
+a {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 :root {
